<resources>
    <string name="app_name">New: Meu DDD</string>
    <string name="app_dev_name">New Outsourcing</string>
    <string name="app_copyright">Copyright 2019 ©</string>

    <string name="str_app_admob_id">ca-app-pub-7022724497408656~1461608600</string>
    <string name="str_app_admob_banner_id">ca-app-pub-7022724497408656/8295869441</string>
    <string name="str_app_admob_banner_test_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="activity_login_txwInformacao"><b>Informe suas credenciais abaixo:</b></string>
    <string name="activity_login_txwEsqueciSenha"><u>Esqueci minha senha</u></string>
    <string name="activity_login_btnLogin">Login</string>
    <string name="activity_login_btnCadastrar">Cadastrar</string>
    <string name="activity_login_edtUsuario">E-mail</string>
    <string name="activity_login_edtSenha">Senha</string>

    <string name="activity_forgot_password_edtEmail">E-mail</string>
    <string name="activity_forgot_password_txwInformacao"><b>Informe seu e-mail abaixo:</b></string>
    <string name="activity_forgot_password_btnEnviar">Enviar</string>
    <string name="activity_forgot_password_recuperar_senha">Recuperar senha</string>

    <string name="activity_user_edtSenha">Senha</string>
    <string name="activity_user_informacao">Informe seus dados de usuário:</string>
    <string name="activity_user_edtNome">Nome</string>
    <string name="activity_user_nome">Cadastro de usuário</string>
    <string name="activity_user_cadastrar">Cadastrar</string>

    <string name="activity_menu_por_cidade">Por Cidade</string>
    <string name="activity_menu_por_ddd">Por DDD</string>
    <string name="activity_menu_opcoes">Opções de consulta</string>

    <string name="fragment_city_cidade">Informe a cidade</string>
    <string name="fragment_city_uf">Informe o estado:</string>
    <string name="fragment_city_consultar">Consultar</string>
    <string name="fragment_ddd_ddd">Informe o DDD</string>

    <string name="card_view_ddd_cidades_cidade">Cidade:</string>
    <string name="card_view_ddd_cidades_operadora">Operadora:</string>
    <string name="card_view_ddd_cidades_estado">UF:</string>
    <string name="card_view_ddd_cidades_DDD">DDD:</string>

    <string-array name="fragment_uf">
        <item>""</item>
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>

</resources>
