<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activitys.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/corPrimaria"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="18dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/activity_login_txwInformacao" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/idEdtUser"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/activity_login_edtUsuario"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/idEdtPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/activity_login_edtSenha"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/bt_rounded_blue"
            android:text="@string/activity_login_btnLogin"
            android:textAllCaps="false"
            android:textColor="@color/corBranco_FFFFFF"
            android:textStyle="bold" />

        <Button
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/bt_rounded_orange"
            android:text="@string/activity_login_btnCadastrar"
            android:textAllCaps="false"
            android:textColor="@color/corBranco_FFFFFF"
            android:textStyle="bold"
            android:onClick="onClickCadastrar"/>

        <TextView
            android:gravity="center"
            android:textColor="@color/corPrimaria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_txwEsqueciSenha"
            android:onClick="onClickForgotPassword"/>
    </LinearLayout>
</LinearLayout>