<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".Views.Activitys.UserActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/corPrimaria"
        android:elevation="4dp">

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center|start"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/ic_logo"
            android:tint="@color/corBranco_FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_user_nome"
            android:textColor="@color/corBranco_FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="right|center">

            <ImageButton
                android:id="@+id/idBtnFechar"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:background="@mipmap/ic_close"
                android:gravity="right"
                android:onClick="onClickClose" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/activity_user_informacao" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/idEdtNome"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/activity_user_edtNome"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/idEdtEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_edtUsuario"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/idEdtSenha"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/activity_user_edtSenha"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/idBtnCadastrar"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:background="@drawable/bt_rounded_orange"
        android:onClick="onClickCadastrar"
        android:text="@string/activity_user_cadastrar"
        android:textAllCaps="false"
        android:textColor="@color/corBranco_FFFFFF"
        android:textStyle="bold" />

</LinearLayout>