<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Views.Activitys.MenuActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="43dp"
                        android:layout_height="43dp"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/ic_logo"
                        android:tint="@color/corBranco_FFFFFF" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_menu_opcoes"
                        android:textColor="@color/corBranco_FFFFFF"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="right|center">

                    <ImageButton
                        android:layout_width="38dp"
                        android:layout_height="40dp"
                        android:background="@mipmap/ic_close"
                        android:gravity="right"
                        android:onClick="onClickLogOut" />
                </RelativeLayout>

            </android.support.v7.widget.Toolbar>


            <android.support.design.widget.TabLayout
                android:id="@+id/idTabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TabItem
                    android:id="@+id/idTabPorCidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_menu_por_cidade" />

                <android.support.design.widget.TabItem
                    android:id="@+id/idTabPorDDD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_menu_por_ddd" />

            </android.support.design.widget.TabLayout>

        </android.support.design.widget.AppBarLayout>
        <android.support.v4.view.ViewPager
            android:id="@+id/idViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/idAdsView"
        android:layout_weight="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/str_app_admob_banner_id" />
</LinearLayout>
